Fix center aligned animation

--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -9,6 +9,17 @@
     }
 }
 
+@keyframes dropdownShowCenter {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -10%);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(-50%, 0);
+    }
+}
+
 .dropdown-trigger {
     position: relative;
 }
@@ -51,6 +62,7 @@ the trigger and the menu to prevent the menu from disappearing
 .dropdown-menu-center-align {
     left: 50%;
     transform: translateX(-50%);
+    animation: dropdownShowCenter 100ms ease-in 1;
 }
 
 .dropdown-item {
